--- a/nwjs/index.html
+++ b/nwjs/index.html
@@ -142,7 +142,7 @@
       </div>
 
       <div id="localmode" class="tab">
-        <iframe id="localframe" src="" seamless width="640" height="480" ></iframe>
+        <iframe id="localframe" src="" seamless width="100%" height="640" ></iframe>
       </div>
 
     </div>
